# hmziq.xyz

./: .firebaserc  CLAUDE.md  Cargo.toml  Dioxus.toml  firebase.json  guide.md  index.html  ref2.html  robots.txt  sitemap.xml  tailwind.css
.commandcode/taste/: taste.md
.github/workflows/: build-assets.yml  daily-update.yml  deploy.yml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_and_conventions.md  project_purpose_and_overview.md  project_structure.md  suggested_commands.md  task_completion_workflow.md
assets/: app.js  github-activity.json  main.css  project-stats.json  tailwind.css
assets/fav/: site.webmanifest
plans/: 01-components-extraction.md  02-page-assembly.md  03-canvas-todo.md  ather.md  guide.md  ref2.md  script.md  seo.md
ref/: ather.js  ref.html  seo.md
scripts/: GITHUB_TOKEN_SETUP.md  README.md  assets-fix.ts  assets.rs  assets.ts  github-activity.ts  project-stats.ts
src/: config.rs  main.rs  router.rs  types.rs
src/components/: mod.rs
src/components/buttons/: explore_button.rs  filter_button.rs  mod.rs  project_link.rs
src/components/cards/: contact_card.rs  mod.rs  project_card.rs
src/components/decorative/: ather_canvas.rs  coordinates.rs  cursor_glow.rs  mod.rs  nebula.rs  orbit.rs
src/containers/: mod.rs
src/hooks/: mod.rs  use_previous.rs
src/screens/: not_found.rs
src/screens/home/: contact.rs  github_activity.rs  hero.rs  mod.rs  projects.rs
src/store/: lib.rs  mod.rs
src/store/home/: mod.rs  projects.rs
src/store/viewport/: actions.rs  mod.rs  state.rs
src/ui/: mod.rs
src/ui/layout/: mod.rs  tag.rs
src/ui/text/: glitch_title.rs  mod.rs  section_title.rs
