[package]
name = "hmziq-xyz"
version = "1.0.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4" }

# Web-specific
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "MouseEvent",
    "HtmlElement",
] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
js-sys = "0.3.77"

# UI and icons (commented out for now to avoid version conflicts)
# hmziq-dioxus-free-icons = { version = "0.9", features = ["lucide", "simple-icons"] }
# dioxus-toast = { version = "0.6", features = ["web"] }


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false


[[bin]]
name = "assets"
path = "scripts/assets.rs"

# Dependencies only for non-WASM targets (scripts)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Add any script-specific dependencies here if needed in the future
