[package]
name = "hmziq-xyz"
version = "1.0.0"
authors = ["hmziqrs <hmziqrs@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-alpha.3", features = ["router", "fullstack"] }
dioxus-isrg = { version = "0.7.0-alpha.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
chrono = { version = "0.4.40" }
askama_escape = { version = "0.10.3", optional = true }

# Web-specific
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "MouseEvent",
    "HtmlElement",
] }
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
js-sys = "0.3.77"


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dioxus/ssr", "dep:askama_escape"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false


[[bin]]
name = "assets"
path = "scripts/assets.rs"

# Dependencies only for non-WASM targets (scripts)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.8.3"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
